Added `companionLimitPerPlayer` option to limit the number of tamed companions per player on multiplayer servers.